crates/specforge-cli/tests/snapshots/tests__read_views__list_and_search_today_list_unknown_kind.snap
---
source: crates/specforge-cli/tests/read_views.rs
expression: "normalized(result, root).to_string()"
---
{
  "content": [
    {
      "text": "[]",
      "type": "text"
    }
  ],
  "isError": false
}
