crates/specforge-cli/tests/snapshots/tests__read_views__list_and_search_today_search_capitalized_kind.snap
---
source: crates/specforge-cli/tests/read_views.rs
expression: "normalized(result, root).to_string()"
---
{
  "_meta": {
    "diagnostics": [
      {
        "code": "I020",
        "column": null,
        "file": null,
        "line": null,
        "message": "unknown entity kind 'Behavior'",
        "severity": "Info",
        "span": null,
        "suggestion": "did you mean 'behavior'?",
        "title": "Unknown entity kind in a filter"
      }
    ]
  },
  "content": [
    {
      "text": "{\"results\":[]}",
      "type": "text"
    }
  ],
  "isError": false
}
