crates/specforge-cli/tests/snapshots/tests__read_views__query_today_cli_ghost.snap
---
source: crates/specforge-cli/tests/read_views.rs
expression: text
---
exit: Some(1)
stdout:
stderr:
unresolved entity 'logn' — not found in graph
