crates/specforge-cli/tests/snapshots/tests__read_views__query_today_cli_unknown_kind.snap
---
source: crates/specforge-cli/tests/read_views.rs
expression: text
---
exit: Some(0)
stderr: ""
nodes: ["login"]
