crates/specforge-cli/tests/snapshots/tests__read_views__query_today_mcp_coverage_brief.snap
---
source: crates/specforge-cli/tests/read_views.rs
expression: text
---
{
  "content": [
    {
      "text": "{\"edges\":[{\"label\":\"features\",\"source\":\"login\",\"target\":\"signin\"}],\"nodes\":[{\"coverage_status\":\"covered\",\"id\":\"login\",\"kind\":\"behavior\",\"title\":\"Log in\"},{\"coverage_status\":\"uncovered\",\"id\":\"signin\",\"kind\":\"feature\",\"title\":\"Sign in\"}],\"schema_version\":\"0.1.0\"}",
      "type": "text"
    }
  ],
  "isError": false
}
