crates/specforge-cli/tests/snapshots/tests__read_views__query_today_mcp_ghost.snap
---
source: crates/specforge-cli/tests/read_views.rs
expression: text
---
{
  "content": [
    {
      "text": "{\"code\":\"entity_not_found\",\"diagnostic\":{\"code\":\"E003\",\"column\":null,\"file\":null,\"line\":null,\"message\":\"unresolved entity 'logn' — not found in graph\",\"severity\":\"Error\",\"span\":null,\"suggestion\":null,\"title\":\"Unresolved reference\"},\"entity_id\":\"logn\",\"message\":\"unresolved entity 'logn' — not found in graph\",\"tool\":\"specforge.query\"}",
      "type": "text"
    }
  ],
  "isError": true
}
