crates/specforge-cli/tests/snapshots/tests__read_views__query_today_mcp_unknown_kind.snap
---
source: crates/specforge-cli/tests/read_views.rs
expression: text
---
{
  "_meta": {
    "diagnostics": [
      {
        "code": "I020",
        "column": null,
        "file": null,
        "line": null,
        "message": "unknown entity kind 'behaviour'",
        "severity": "Info",
        "span": null,
        "suggestion": "did you mean 'behavior'?",
        "title": "Unknown entity kind in a filter"
      }
    ]
  },
  "content": [
    {
      "text": "{\"edges\":[],\"format_version\":\"2.0\",\"nodes\":[{\"fields\":{\"contract\":\"The system MUST let a known user log in\",\"features\":[\"signin\"],\"verify\":[{\"description\":\"a known user logs in\",\"kind\":\"unit\"}]},\"file\":\"main.spec\",\"id\":\"login\",\"kind\":\"behavior\",\"line\":1,\"title\":\"Log in\"}],\"schema_ref\":{\"content_hash\":\"[SHA256]\",\"url\":\"https://specforge.dev/schema/graph-protocol-v1.0.0.json\"},\"schema_version\":\"1.0.0\"}",
      "type": "text"
    }
  ],
  "isError": false
}
